--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,12 @@ jobs:
         with:
           workspaces: "./src-tauri -> target"
 
+      - name: Install Linux dependencies
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libcairo2-dev libwebkit2gtk-4.0-dev pkg-config build-essential
+
       - name: Install dependencies
         run: npm ci
 
