--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [windows-latest, macos-latest, ubuntu-22.04]
 
     runs-on: ${{ matrix.platform }}
 
@@ -37,10 +37,21 @@ jobs:
           workspaces: "./src-tauri -> target"
 
       - name: Install Linux dependencies
-        if: matrix.platform == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libcairo2-dev libwebkit2gtk-4.0-dev pkg-config build-essential
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libcairo2-dev \
+            libwebkit2gtk-4.0-dev \
+            pkg-config \
+            build-essential \
+            libgdk-pixbuf2.0-dev \
+            libpango1.0-dev \
+            libatk1.0-dev \
+            libsoup-3.0-dev \
+            javascriptcoregtk-4.1 \
+            webkit2gtk-4.1
 
       - name: Install dependencies
         run: npm ci
@@ -68,13 +79,12 @@ jobs:
             src-tauri/target/release/bundle/macos/*.app
 
       - name: Upload Linux artifacts
-        if: matrix.platform == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
           name: linux-artifacts
           path: |
             src-tauri/target/release/bundle/deb/*.deb
-            src-tauri/target/release/bundle/appimage/*.AppImage
             src-tauri/target/release/markdown-viewer
 
   release:
